# adapt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  adapt_cli.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
ADAPT_browser/: __init__.py  app.py
ADAPT_browser/core/: __init__.py  data_manager.py  metadata_cache.py  ratings.py
ADAPT_browser/ui/: __init__.py  collections_panel.py  compare_panel.py  directory_panel.py  file_list_panel.py  main_window.py  viewer_panel.py
ADAPT_browser/utils/: __init__.py  logger.py  meta_format.py  plotting.py
ADAPT_edit/: __init__.py  server.py
ADAPT_edit/static/: index.html  style.css
ADAPT_edit/static/js/: app.js  data_loader.js  visualizer.js
ADAPT_viewer/: server.py
ADAPT_viewer/static/: index.html  style.css
ADAPT_viewer/static/js/: app.js  converter.js  crop_box.js  data_loader.js  physics.js  visualizer.js
shared/: __init__.py
shared/brillouin_zone/: __init__.py  arpes_overlay.py  br_zone.py  bz_geometry.py  bz_visualization.py  lattice.py
shared/loaders/: __init__.py  load_adress_data.py  load_ibw_data.py  load_pxt_data.py  load_ses_zip.py  load_sis_data.py  unified.py
shared/processing/: __init__.py  align.py  angle_to_k.py  artifacts.py  background.py  dimension.py  edit.py  fermi_edge_fit.py  io.py  visualization.py
shared/session/: __init__.py  app_state.py  session_manager.py
shared/utils/: __init__.py  config.py  constants.py  path_utils.py
tests/: test_adapt_cli.py  test_app_state.py  test_config.py  test_processing_io.py  test_ratings.py  test_unified_loader.py
(+13 files in other folders)
