[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-arpes"
version = "0.1.0"
description = "ARPES Data Analysis and Processing Tool"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "xarray>=2022.3.0",
    "h5py>=3.7.0",
    "igor2>=0.5.0",
    "matplotlib>=3.5.0",
    "pyqtgraph>=0.13.0",
    "PySide6>=6.4.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "mp-api",
    "plotly>=5.15.0",
]

[project.scripts]
adapt = "adapt_cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["adapt_cli"]

[tool.setuptools.packages.find]
include = ["ADAPT_browser*", "ADAPT_edit*", "shared*"]

[tool.setuptools.package-data]
ADAPT_edit = ["static/**/*"]
